# DoctorPatientDialogue-CrewAI

./: README.md
doctor_patient/: README.md  pyproject.toml  report.md  streamlit_app.py  streamlit_app_backup.py
doctor_patient/src/doctor_patient/: crew.py  main.py
doctor_patient/src/doctor_patient/config/: agents.yaml  tasks.yaml
doctor_patient/src/doctor_patient/tools/: custom_tool.py  retrieval.py  we have a dataset of doctor-patient dial.md
