[project]
name = "doctor_patient"
version = "0.1.0"
description = "doctor-patient using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
doctor_patient = "doctor_patient.main:run"
run_crew = "doctor_patient.main:run"
train = "doctor_patient.main:train"
replay = "doctor_patient.main:replay"
test = "doctor_patient.main:test"
run_with_trigger = "doctor_patient.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
